bin_PROGRAMS = dancy
dancy_SOURCES = ArManager.cpp ArManager.h Arrow.cpp ArrowFactory.cpp ArrowFactory.h Arrow.h ArrowPrototypeFactory.cpp ArrowPrototypeFactory.h ASceneNode.cpp ASceneNode.h CGameLogic.h ConfigFileManager.cpp ConfigFileManager.h Config.h DefaultGameLogic.cpp DefaultGameLogic.h GameEventReceiver.cpp GameEventReceiver.h GameInfo.cpp GameInfo.h GameObject.cpp GameObject.h GameOverState.cpp GameOverState.h HighScore.cpp HighScore.h IConfigFileReader.h IConfigFileWriter.h IGameLogic.h irrAR.cpp irrAR.h IState.h MenuFactory.cpp MenuFactory.h MenuHandler.cpp MenuHandler.h MyEventReceiver.h MyNode.h note_config.h NoteData.cpp NoteData.h NotesLoader.cpp NotesLoader.h NoteTypes.cpp NoteTypes.h Score.cpp Score.h SettingHandler.cpp SettingHandler.h SongCollection.cpp SongCollection.h Song.cpp Song.h SongListScreen.cpp SongListScreen.h StateMachine.cpp StateMachine.h test.cpp
dancy_LDFLAGS = -lIrrlicht -lvorbisfile -lIrrKlang -lgstreamer-0.10 -lARgsub -lARgsubUtil -lAR -lARMulti -lARvidel

